Update 2-2.html font + hash links + table

--- a/teaching/300/2-2.html
+++ b/teaching/300/2-2.html
@@ -7,6 +7,11 @@
 <link rel="stylesheet" href="LaTeXML.css" type="text/css">
 <link rel="stylesheet" href="ltx-article.css" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<style>
+  article {
+    font-family: "Arial";
+  }
+</style>
 </head>
 <body>
 <div class="ltx_page_main">
@@ -182,7 +187,7 @@
 </section>
 <section id="S2.SS2.SSS3" class="ltx_subsubsection">
 <h4 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">2.2.3 </span>Theorem 2.5 (De Morgan’s Laws)</h4>
+<span id="Theorem_2.5" class="ltx_tag ltx_tag_subsubsection">2.2.3 </span>Theorem 2.5 (De Morgan’s Laws)</h4>
 
 <div id="S2.SS2.SSS3.p1" class="ltx_para">
 <p class="ltx_p">For statements <math id="S2.SS2.SSS3.p1.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> and <math id="S2.SS2.SSS3.p1.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>,</p>
@@ -204,7 +209,7 @@
 </ul>
 </div>
 <div id="S2.SS2.SSS3.p3" class="ltx_para">
-<p class="ltx_p">The first equivalency in Theorem 2.5 was established in Beginning Activity 1.
+<p class="ltx_p">The first equivalency in <a href="#Theorem_2.5">Theorem 2.5</a> was established in Beginning Activity 1.
 <br class="ltx_break">Table 2.3 establishes the second equivalency.</p>
 </div>
 <figure id="S2.T1" class="ltx_table">
@@ -259,7 +264,7 @@
 </tr>
 </tbody>
 </table>
-<figcaption class="ltx_caption ltx_centering"><span class="ltx_tag ltx_tag_table">Table 1: </span>Table 2.3: Truth Table for One of De Morgan’s Laws</figcaption>
+<figcaption class="ltx_caption ltx_centering">Truth Table for One of De Morgan’s Laws</figcaption>
 </figure>
 <div id="S2.SS2.SSS3.p4" class="ltx_para">
 <p class="ltx_p">It is possible to develop and state several different logical equivalencies at this time. However, we will restrict ourselves to what are considered to be some of the most important ones. Since many mathematical statements are written in the form of conditional statements, logical equivalencies related to conditional statements are quite important.</p>
@@ -273,7 +278,7 @@
 <p class="ltx_p">The first two logical equivalencies in the following theorem were established in Beginning Activity 1, and the third logical equivalency was established in Beginning Activity 2.</p>
 </div>
 <div id="S2.SS2.SSS4.p2" class="ltx_para">
-<p class="ltx_p"><span class="ltx_text ltx_font_bold">Theorem</span> 2.6. For statements <math id="S2.SS2.SSS4.p2.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> and <math id="S2.SS2.SSS4.p2.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>,</p>
+<p id="Theorem_2.6">class="ltx_p"><span class="ltx_text ltx_font_bold">Theorem</span> 2.6. For statements <math id="S2.SS2.SSS4.p2.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> and <math id="S2.SS2.SSS4.p2.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>,</p>
 </div>
 <div id="S2.SS2.SSS4.p3" class="ltx_para">
 <ol id="S2.I7" class="ltx_enumerate">
@@ -379,7 +384,7 @@
 <li id="S2.I8.i3" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">•</span> 
 <div id="S2.I8.i3.p1" class="ltx_para">
-<p class="ltx_p">Hence, by one of De Morgan’s Laws (Theorem 2.5), <math id="S2.I8.i3.p1.m1" class="ltx_Math" alttext="\neg(P\rightarrow Q)" display="inline"><mrow><mo>¬</mo><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></math> is logically equivalent to <math id="S2.I8.i3.p1.m2" class="ltx_Math" alttext="\neg(\neg P)\wedge\neg Q" display="inline"><mrow><mrow><mo>¬</mo><mrow><mo stretchy="false">(</mo><mrow><mo rspace="0.167em">¬</mo><mi>P</mi></mrow><mo stretchy="false">)</mo></mrow></mrow><mo>∧</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow></math>.</p>
+<p class="ltx_p">Hence, by one of De Morgan’s Laws (<a href="#Theorem_2.5">Theorem 2.5</a>), <math id="S2.I8.i3.p1.m1" class="ltx_Math" alttext="\neg(P\rightarrow Q)" display="inline"><mrow><mo>¬</mo><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></math> is logically equivalent to <math id="S2.I8.i3.p1.m2" class="ltx_Math" alttext="\neg(\neg P)\wedge\neg Q" display="inline"><mrow><mrow><mo>¬</mo><mrow><mo stretchy="false">(</mo><mrow><mo rspace="0.167em">¬</mo><mi>P</mi></mrow><mo stretchy="false">)</mo></mrow></mrow><mo>∧</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow></math>.</p>
 </div>
 </li>
 <li id="S2.I8.i4" class="ltx_item" style="list-style-type:none;">
@@ -402,7 +407,7 @@
 <span class="ltx_tag ltx_tag_subsubsection">2.2.7 </span>Progress Check 2.7 (Working with a Logical Equivalency)</h4>
 
 <div id="S2.SS2.SSS7.p1" class="ltx_para">
-<p class="ltx_p">In Section 2.1, we constructed a truth table for <math id="S2.SS2.SSS7.p1.m1" class="ltx_Math" alttext="(P\wedge\neg Q)\rightarrow R" display="inline"><mrow><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo>∧</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">→</mo><mi>R</mi></mrow></math>. See Table 2.2 in Section 2.1.</p>
+<p class="ltx_p">In Section 2.1, we constructed a truth table for <math id="S2.SS2.SSS7.p1.m1" class="ltx_Math" alttext="(P\wedge\neg Q)\rightarrow R" display="inline"><mrow><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo>∧</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">→</mo><mi>R</mi></mrow></math>. See <a href="https://johnweeks03.github.io/teaching/300/2-1.html#Table_2.2">Table 2.2</a> in Section 2.1.</p>
 </div>
 <div id="S2.SS2.SSS7.p2" class="ltx_para">
 <ol id="S2.I9" class="ltx_enumerate">
@@ -465,7 +470,7 @@
 </section>
 <section id="S2.SS2.SSS8" class="ltx_subsubsection">
 <h4 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">2.2.8 </span>Theorem 2.8 (Important Logical Equivalencies)</h4>
+<span id="Theorem 2.8" class="ltx_tag ltx_tag_subsubsection">2.2.8 </span>Theorem 2.8 (Important Logical Equivalencies)</h4>
 
 <div id="S2.SS2.SSS8.p1" class="ltx_para">
 <p class="ltx_p">For statements <math id="S2.SS2.SSS8.p1.m1" class="ltx_Math" alttext="P,Q" display="inline"><mrow><mi>P</mi><mo>,</mo><mi>Q</mi></mrow></math>, and <math id="S2.SS2.SSS8.p1.m2" class="ltx_Math" alttext="R" display="inline"><mi>R</mi></math>,</p>
@@ -1003,7 +1008,7 @@
 <li id="S2.I11.i13.I1.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">(a)</span> 
 <div id="S2.I11.i13.I1.i1.p1" class="ltx_para">
-<p class="ltx_p">Write the symbolic form of the contrapositive of <math id="S2.I11.i13.I1.i1.p1.m1" class="ltx_Math" alttext="P\rightarrow(Q\vee R)" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mrow><mo stretchy="false">(</mo><mrow><mi>Q</mi><mo>∨</mo><mi>R</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></math>. Then use one of De Morgan’s Laws (Theorem 2.5) to rewrite the hypothesis of this conditional statement.</p>
+<p class="ltx_p">Write the symbolic form of the contrapositive of <math id="S2.I11.i13.I1.i1.p1.m1" class="ltx_Math" alttext="P\rightarrow(Q\vee R)" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mrow><mo stretchy="false">(</mo><mrow><mi>Q</mi><mo>∨</mo><mi>R</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></math>. Then use one of De Morgan’s Laws (<a href="#Theorem_2.5">Theorem 2.5</a>) to rewrite the hypothesis of this conditional statement.</p>
 </div>
 </li>
 <li id="S2.I11.i13.I1.i2" class="ltx_item" style="list-style-type:none;">
@@ -1018,7 +1023,7 @@
 </ol>
 </div>
 <div id="S2.I11.i13.p6" class="ltx_para">
-<p class="ltx_p">The two statements in this activity are logically equivalent. We now have the choice of proving either of these statements. If we prove one, we prove the other, or if we show one is false, the other is also false. The second statement is Theorem 1.8, which was proven in Section 1.2.</p>
+<p class="ltx_p">The two statements in this activity are logically equivalent. We now have the choice of proving either of these statements. If we prove one, we prove the other, or if we show one is false, the other is also false. The second statement is <a href="https://johnweeks03.github.io/teaching/300/1-2.html#Theorem1.8">Theorem 1.8</a>, which was proven in Section 1.2.</p>
 </div>
 </li>
 </ol>
