Update 2-2.html typo

--- a/teaching/300/2-2.html
+++ b/teaching/300/2-2.html
@@ -278,7 +278,7 @@
 <p class="ltx_p">The first two logical equivalencies in the following theorem were established in Beginning Activity 1, and the third logical equivalency was established in Beginning Activity 2.</p>
 </div>
 <div id="S2.SS2.SSS4.p2" class="ltx_para">
-<p id="Theorem_2.6">class="ltx_p"><span class="ltx_text ltx_font_bold">Theorem</span> 2.6. For statements <math id="S2.SS2.SSS4.p2.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> and <math id="S2.SS2.SSS4.p2.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>,</p>
+<p id="Theorem_2.6" class="ltx_p"><span class="ltx_text ltx_font_bold">Theorem</span> 2.6. For statements <math id="S2.SS2.SSS4.p2.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> and <math id="S2.SS2.SSS4.p2.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>,</p>
 </div>
 <div id="S2.SS2.SSS4.p3" class="ltx_para">
 <ol id="S2.I7" class="ltx_enumerate">
