Update 2-2.html Add Section 2.1 link

--- a/teaching/300/2-2.html
+++ b/teaching/300/2-2.html
@@ -30,7 +30,7 @@
 <span class="ltx_tag ltx_tag_subsubsection">2.2.1 </span>Beginning Activity 1 (Logically Equivalent Statements)</h4>
 
 <div id="S2.SS2.SSS1.p1" class="ltx_para">
-<p class="ltx_p">In Exercises (5) and (6) from Section 2.1, we observed situations where two different statements have the same truth tables. Basically, this means these statements are equivalent, and we make the following definition:</p>
+<p class="ltx_p">In Exercises (5) and (6) from <a href="https://johnweeks03.github.io/teaching/300/2-1.html">Section 2.1</a>, we observed situations where two different statements have the same truth tables. Basically, this means these statements are equivalent, and we make the following definition:</p>
 </div>
 <div id="S2.SS2.SSS1.p2" class="ltx_para">
 <p class="ltx_p"><span class="ltx_text ltx_font_bold">Definition</span>. Two expressions are <span class="ltx_text ltx_font_bold">logically equivalent</span> provided that they have the same truth value for all possible combinations of truth values for all variables appearing in the two expressions. In this case, we write <math id="S2.SS2.SSS1.p2.m1" class="ltx_Math" alttext="X\equiv Y" display="inline"><mrow><mi>X</mi><mo>≡</mo><mi>Y</mi></mrow></math> and say that <math id="S2.SS2.SSS1.p2.m2" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> and <math id="S2.SS2.SSS1.p2.m3" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> are logically equivalent.</p>
