Update 3-2.html typo

--- a/teaching/300/3-2.html
+++ b/teaching/300/3-2.html
@@ -265,7 +265,7 @@
 <p class="ltx_p">In addition, make sure the reader knows the status of every assertion that you make. That is, make sure you state whether an assertion is an assumption of the theorem, a previously proven result, a well-known result, or something from the reader’s mathematical background. Following is a completed proof of a statement from Beginning Activity 1.</p>
 </div>
 <div id="S3.SS2.SSS5.p4" class="ltx_para">
-<p class="ltx_p"><span id="Theorem_3.7">class="ltx_text ltx_font_bold">Theorem 3.7</span>. For each integer <math id="S3.SS2.SSS5.p4.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>, if <math id="S3.SS2.SSS5.p4.m2" class="ltx_Math" alttext="n^{2}" display="inline"><msup><mi>n</mi><mn>2</mn></msup></math> is an even integer, then <math id="S3.SS2.SSS5.p4.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is an even integer.</p>
+<p class="ltx_p"><span id="Theorem_3.7" class="ltx_text ltx_font_bold">Theorem 3.7</span>. For each integer <math id="S3.SS2.SSS5.p4.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>, if <math id="S3.SS2.SSS5.p4.m2" class="ltx_Math" alttext="n^{2}" display="inline"><msup><mi>n</mi><mn>2</mn></msup></math> is an even integer, then <math id="S3.SS2.SSS5.p4.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is an even integer.</p>
 </div>
 <div id="S3.SS2.SSS5.p5" class="ltx_para">
 <p class="ltx_p"><span class="ltx_text ltx_font_italic">Proof</span>. We will prove this result by proving the contrapositive of the statement, which is</p>
