Update 3-1.html Fixing some enumitem flaws

--- a/teaching/300/3-1.html
+++ b/teaching/300/3-1.html
@@ -86,13 +86,13 @@
 </ol>
 </div>
 <div id="S3.SS1.SSS1.p7" class="ltx_para">
-<p class="ltx_p">As we have seen in Section 1.2, a definition is frequently used when constructing and writing mathematical proofs. Consider the following conjecture:</p>
+<p class="ltx_p">As we have seen in <a href="https://johnweeks03.github.io/teaching/300/1-2.html">Section 1.2</a>, a definition is frequently used when constructing and writing mathematical proofs. Consider the following conjecture:</p>
 </div>
 <div id="S3.SS1.SSS1.p8" class="ltx_para">
 <p class="ltx_p">Conjecture: Let <math id="S3.SS1.SSS1.p8.m1" class="ltx_Math" alttext="a,b" display="inline"><mrow><mi>a</mi><mo>,</mo><mi>b</mi></mrow></math>, and <math id="S3.SS1.SSS1.p8.m2" class="ltx_Math" alttext="c" display="inline"><mi>c</mi></math> be integers with <math id="S3.SS1.SSS1.p8.m3" class="ltx_Math" alttext="a\neq 0" display="inline"><mrow><mi>a</mi><mo>≠</mo><mn>0</mn></mrow></math> and <math id="S3.SS1.SSS1.p8.m4" class="ltx_Math" alttext="b\neq 0" display="inline"><mrow><mi>b</mi><mo>≠</mo><mn>0</mn></mrow></math>. If <math id="S3.SS1.SSS1.p8.m5" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> divides <math id="S3.SS1.SSS1.p8.m6" class="ltx_Math" alttext="b" display="inline"><mi>b</mi></math> and <math id="S3.SS1.SSS1.p8.m7" class="ltx_Math" alttext="b" display="inline"><mi>b</mi></math> divides <math id="S3.SS1.SSS1.p8.m8" class="ltx_Math" alttext="c" display="inline"><mi>c</mi></math>, then a divides <math id="S3.SS1.SSS1.p8.m9" class="ltx_Math" alttext="c" display="inline"><mi>c</mi></math>.</p>
 <ol id="S3.I2" class="ltx_enumerate">
 <li id="S3.I2.i1" class="ltx_item" style="list-style-type:none;">
-<span class="ltx_tag ltx_tag_item">1.</span> 
+<span class="ltx_tag ltx_tag_item">7.</span> 
 <div id="S3.I2.i1.p1" class="ltx_para">
 <p class="ltx_p">Explain why the examples you generated in part (6) provide evidence that this conjecture is true.</p>
 </div>
@@ -101,19 +101,19 @@
 </div>
 </li>
 <li id="S3.I2.i2" class="ltx_item" style="list-style-type:none;">
-<span class="ltx_tag ltx_tag_item">2.</span> 
+<span class="ltx_tag ltx_tag_item">8.</span> 
 <div id="S3.I2.i2.p1" class="ltx_para">
 <p class="ltx_p">State precisely what we would assume if we were trying to write a proof of the preceding conjecture.</p>
 </div>
 </li>
 <li id="S3.I2.i3" class="ltx_item" style="list-style-type:none;">
-<span class="ltx_tag ltx_tag_item">3.</span> 
+<span class="ltx_tag ltx_tag_item">9.</span> 
 <div id="S3.I2.i3.p1" class="ltx_para">
 <p class="ltx_p">Use the definition of "divides" to make some conclusions based on your assumptions in part (8).</p>
 </div>
 </li>
 <li id="S3.I2.i4" class="ltx_item" style="list-style-type:none;">
-<span class="ltx_tag ltx_tag_item">4.</span> 
+<span class="ltx_tag ltx_tag_item">10.</span> 
 <div id="S3.I2.i4.p1" class="ltx_para">
 <p class="ltx_p">State precisely what we would be trying to prove if we were trying to write a proof of the conjecture.</p>
 </div>
@@ -823,7 +823,7 @@
 <div id="S3.SS1.SSS11.p2" class="ltx_para">
 <ol id="S3.I6" class="ltx_enumerate">
 <li id="S3.I6.i1" class="ltx_item" style="list-style-type:none;">
-<span class="ltx_tag ltx_tag_item">1.</span> 
+<span class="ltx_tag ltx_tag_item">5.</span> 
 <div id="S3.I6.i1.p1" class="ltx_para">
 <p class="ltx_p">Use the definition of divides to determine a way to prove that 8 divides <math id="S3.I6.i1.p1.m1" class="ltx_math_unparsed" alttext="(a+b-2" display="inline"><mrow><mo stretchy="false">(</mo><mi>a</mi><mo>+</mo><mi>b</mi><mo>−</mo><mn>2</mn></mrow></math>).</p>
 </div>
