Update 2-4.html symbol jumble on line 52 attempt to fix

--- a/teaching/300/2-4.html
+++ b/teaching/300/2-4.html
@@ -49,7 +49,7 @@
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
-<td class="ltx_eqn_cell ltx_align_center"><math id="S2.Ex1.m1" class="ltx_Math" alttext="\text{ There exists an integer }x\text{ such that }3x-2=0\text{. }" display="block"><mrow><mrow><mrow><mtext> There exists an integer </mtext><mo>⁢</mo><mi>x</mi><mo>⁢</mo><mtext> such that </mtext><mo>⁢</mo><mn>3</mn><mo>⁢</mo><mi>x</mi></mrow><mo>−</mo><mn>2</mn></mrow><mo>=</mo><mrow><mn>0</mn><mo>⁢</mo><mtext>. </mtext></mrow></mrow></math></td>
+<td class="ltx_eqn_cell ltx_align_center"><math id="S2.Ex1.m1" class="ltx_Math" alttext="\text{ There exists an integer }x\text{ such that }3x-2=0\text{. }" display="block"><mrow><mtext> There exists an integer </mtext><mo>⁢</mo><mi>x</mi><mo>⁢</mo><mtext> such that </mtext><mo>⁢</mo><mn>3</mn><mo>⁢</mo><mi>x</mi><mo>−</mo><mn>2</mn></mrow><mo>=</mo><mrow><mn>0</mn><mo>⁢</mo><mtext>. </mtext></mrow></mrow></mrow></math></td>
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr></tbody>
 </table>
