--- a/teaching/300/2-4.html
+++ b/teaching/300/2-4.html
@@ -49,7 +49,7 @@
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
-<td class="ltx_eqn_cell ltx_align_center"><math id="S2.Ex1.m1" class="ltx_Math" alttext="\text{ There exists an integer }x\text{ such that }3x-2=0\text{. }" display="block"><mrow><mtext> There exists an integer </mtext><mo>⁢</mo><mi>x</mi><mo>⁢</mo><mtext> such that </mtext><mo>⁢</mo><mn>3</mn><mo>⁢</mo><mi>x</mi><mo>−</mo><mn>2</mn><mo>=</mo><mn>0</mn><mo>⁢</mo><mtext>. </mtext></mrow></math></td>
+<td class="ltx_eqn_cell ltx_align_center"><math id="S2.Ex1.m1" class="ltx_Math" alttext="\text{ There exists an integer }x\text{ such that }3x-2=0\text{. }" display="block"><mrow><mrow><mrow><mtext> There exists an integer </mtext><mo>⁢</mo><mi>x</mi><mo>⁢</mo><mtext> such that </mtext><mo>⁢</mo><mn>3</mn><mo>⁢</mo><mi>x</mi><mo>−</mo><mn>2</mn><mo>=</mo><mn>0</mn><mo>⁢</mo><mtext>. </mtext></mrow></mrow></mrow></math></td>
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr></tbody>
 </table>
@@ -1899,7 +1899,6 @@
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_center ltx_th ltx_th_column ltx_border_l ltx_border_r ltx_border_t">Notation</th>
 <th class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_r ltx_border_t">Description</th>
-<th class="ltx_td ltx_align_center ltx_th ltx_th_column ltx_border_r ltx_border_t">Page</th>
 </tr>
 </thead>
 <tbody class="ltx_tbody">
@@ -1907,23 +1906,19 @@
 <td class="ltx_td ltx_align_center ltx_border_l ltx_border_r ltx_border_t"><math id="S2.SS5.SSS3.m1" class="ltx_Math" alttext="y\in A" display="inline"><mrow><mi>y</mi><mo>∈</mo><mi>A</mi></mrow></math></td>
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">
 <math id="S2.SS5.SSS3.m2" class="ltx_Math" alttext="y" display="inline"><mi>y</mi></math> is an element of the set <math id="S2.SS5.SSS3.m3" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math>.</td>
-<td class="ltx_td ltx_align_center ltx_border_r ltx_border_t">55</td>
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_center ltx_border_l ltx_border_r ltx_border_t"><math id="S2.SS5.SSS3.m4" class="ltx_Math" alttext="z\notin A" display="inline"><mrow><mi>z</mi><mo>∉</mo><mi>A</mi></mrow></math></td>
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">
 <math id="S2.SS5.SSS3.m5" class="ltx_Math" alttext="z" display="inline"><mi>z</mi></math> is not an element of the set <math id="S2.SS5.SSS3.m6" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math>.</td>
-<td class="ltx_td ltx_align_center ltx_border_r ltx_border_t">55</td>
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_center ltx_border_l ltx_border_r ltx_border_t"><math id="S2.SS5.SSS3.m7" class="ltx_Math" alttext="\{\quad\}" display="inline"><mrow><mo rspace="1.000em" stretchy="false">{</mo><mo stretchy="false">}</mo></mrow></math></td>
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">The roster method</td>
-<td class="ltx_td ltx_align_center ltx_border_r ltx_border_t">53</td>
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_center ltx_border_b ltx_border_l ltx_border_r ltx_border_t"><math id="S2.SS5.SSS3.m8" class="ltx_Math" alttext="\{x\in U\mid P(x)\}" display="inline"><mrow><mo stretchy="false">{</mo><mrow><mi>x</mi><mo>∈</mo><mi>U</mi></mrow><mo fence="true" lspace="0em" rspace="0em">∣</mo><mrow><mi>P</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo stretchy="false">}</mo></mrow></math></td>
 <td class="ltx_td ltx_align_left ltx_border_b ltx_border_r ltx_border_t">Set builder notation</td>
-<td class="ltx_td ltx_align_center ltx_border_b ltx_border_r ltx_border_t">58</td>
 </tr>
 </tbody>
 </table>
