Update 3-3.html Remove header rows from Exs 18-19

--- a/teaching/300/3-3.html
+++ b/teaching/300/3-3.html
@@ -973,9 +973,9 @@ Note: You may even assume that we have proven that <math id="S3.I12.i7.I1.i2.p1.
 <table class="ltx_tabular ltx_centering ltx_guessed_headers ltx_align_middle">
 <thead class="ltx_thead">
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_l ltx_border_r ltx_border_t">8</th>
-<th class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_r ltx_border_t">3</th>
-<th class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_r ltx_border_t">4</th>
+<td class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_l ltx_border_r ltx_border_t">8</td>
+<td class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_r ltx_border_t">3</td>
+<td class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_r ltx_border_t">4</td>
 </tr>
 </thead>
 <tbody class="ltx_tbody">
@@ -999,10 +999,10 @@ Note: You may even assume that we have proven that <math id="S3.I12.i7.I1.i2.p1.
 <table class="ltx_tabular ltx_centering ltx_guessed_headers ltx_align_middle">
 <thead class="ltx_thead">
 <tr class="ltx_tr">
-<th class="ltx_td ltx_th ltx_th_column ltx_border_l ltx_border_r ltx_border_t"></th>
-<th class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_r ltx_border_t">1</th>
-<th class="ltx_td ltx_th ltx_th_column ltx_border_r ltx_border_t"></th>
-<th class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_r ltx_border_t">2</th>
+<td class="ltx_td ltx_th ltx_th_column ltx_border_l ltx_border_r ltx_border_t"></td>
+<td class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_r ltx_border_t">1</td>
+<td class="ltx_td ltx_th ltx_th_column ltx_border_r ltx_border_t"></td>
+<td class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_r ltx_border_t">2</td>
 </tr>
 </thead>
 <tbody class="ltx_tbody">
@@ -1037,9 +1037,9 @@ Note: You may even assume that we have proven that <math id="S3.I12.i7.I1.i2.p1.
 <table class="ltx_tabular ltx_centering ltx_guessed_headers ltx_align_middle">
 <thead class="ltx_thead">
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_l ltx_border_r ltx_border_t"><math id="S3.I12.i19.m1" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math></th>
-<th class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_r ltx_border_t"><math id="S3.I12.i19.m2" class="ltx_Math" alttext="b" display="inline"><mi>b</mi></math></th>
-<th class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_r ltx_border_t"><math id="S3.I12.i19.m3" class="ltx_Math" alttext="c" display="inline"><mi>c</mi></math></th>
+<td class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_l ltx_border_r ltx_border_t"><math id="S3.I12.i19.m1" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math></td>
+<td class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_r ltx_border_t"><math id="S3.I12.i19.m2" class="ltx_Math" alttext="b" display="inline"><mi>b</mi></math></td>
+<td class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_r ltx_border_t"><math id="S3.I12.i19.m3" class="ltx_Math" alttext="c" display="inline"><mi>c</mi></math></td>
 </tr>
 </thead>
 <tbody class="ltx_tbody">
