Update 1-1.html Accessibility changes

--- a/teaching/300/1-1.html
+++ b/teaching/300/1-1.html
@@ -18,6 +18,8 @@
 <div class="ltx_page_content">
 <article class="ltx_document">
 <section id="S1" class="ltx_section">
+<h1 class="ltx_title ltx_title_section">
+Mathematical Reasoning: Writing and Proof</h1>
 <h2 class="ltx_title ltx_title_section">
 <span class="ltx_tag ltx_tag_section">1 </span>Introduction to Writing Proofs in Mathematics</h2>
 
@@ -377,7 +379,7 @@
 </ul>
 </div>
 <section id="Progress_1.2" class="ltx_section">
-<h2 class="ltx_title ltx_title_section">Progress Check 1.2 (Explorations)</h2>
+<h4 class="ltx_title ltx_title_section">Progress Check 1.2 (Explorations)</h4>
 
 <div id="Sx1.p1" class="ltx_para">
 <p class="ltx_p">Use the techniques of exploration to investigate each of the following statements. Can you make a conjecture as to whether the statement is true or false? Can you determine whether it is true or false?</p>
@@ -412,7 +414,7 @@
 </div>
 </section>
 <section id="Sx2" class="ltx_section">
-<h2 class="ltx_title ltx_title_section">Conditional Statements</h2>
+<h4 class="ltx_title ltx_title_section">Conditional Statements</h4>
 
 <div id="Sx2.p1" class="ltx_para">
 <p class="ltx_p">We had our first encounter with conditional statements in Beginning Activity 2. Since conditional statements are the most important type of statement in mathematics, we give a more formal definition.</p>
@@ -1282,7 +1284,7 @@
 </article>
 </div>
 <footer role="contentinfo" class="ltx_page_footer">
-<div class="ltx_page_logo"><a href="https://scholarworks.gvsu.edu/books/24/">Mathematical Reasoning: Writing and Proof, Version 3</a> © 2020 by <a href="https://www.tedsundstrom.com/">Ted Sundstrom</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="Creative Commons Logo" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/sa.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"></div></footer>
+<div class="ltx_page_logo"><a href="https://scholarworks.gvsu.edu/books/24/">Mathematical Reasoning: Writing and Proof, Version 3</a> © 2020 by <a href="https://www.tedsundstrom.com/">Ted Sundstrom</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="Creative Commons Logo" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="Attribution" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" alt="NonCommercial" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/sa.svg" alt="ShareAlike" style="max-width: 1em;max-height:1em;margin-left: .2em;"></div></footer>
 </div>
 </body>
 </html>
