--- a/teaching/300/1-1.html
+++ b/teaching/300/1-1.html
@@ -333,7 +333,7 @@ Mathematical Reasoning: Writing and Proof</h1>
 <p class="ltx_p">For example, if someone makes the conjecture that <math id="S1.SS1.SSS6.p3.m1" class="ltx_Math" data-alttext="\sin(2x)=2\sin(x)" display="inline"><mrow><mrow><mi>sin</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mrow><mn>2</mn><mo>⁢</mo><mi>x</mi></mrow><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mn>2</mn><mo lspace="0.167em">⁢</mo><mrow><mi>sin</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></mrow></mrow></math>, for all real numbers <math id="S1.SS1.SSS6.p3.m2" class="ltx_Math" data-alttext="x" display="inline"><mi>x</mi></math>, we can test this conjecture by substituting specific values for <math id="S1.SS1.SSS6.p3.m3" class="ltx_Math" data-alttext="x" display="inline"><mi>x</mi></math>. One way to do this is to choose values of <math id="S1.SS1.SSS6.p3.m4" class="ltx_Math" data-alttext="x" display="inline"><mi>x</mi></math> for which <math id="S1.SS1.SSS6.p3.m5" class="ltx_Math" data-alttext="\sin(x)" display="inline"><mrow><mi>sin</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> is known. Using <math id="S1.SS1.SSS6.p3.m6" class="ltx_Math" data-alttext="x=\frac{\pi}{4}" display="inline"><mrow><mi>x</mi><mo>=</mo><mfrac><mi>π</mi><mn>4</mn></mfrac></mrow></math>, we see that</p>
 </div>
 <div id="S1.SS1.SSS6.p4" class="ltx_para">
-<table id="S1.EGx1" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
+<table id="S1.EGx1" role="presentation" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S1.Ex1"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -643,7 +643,7 @@ Mathematical Reasoning: Writing and Proof</h1>
 <br class="ltx_break">For many values of <math id="S1.I12.i2.p3.m3" class="ltx_Math" data-alttext="n,\left(n^{2}-n+41\right)" display="inline"><mrow><mi>n</mi><mo>,</mo><mrow><mo>(</mo><mrow><mrow><msup><mi>n</mi><mn>2</mn></msup><mo>−</mo><mi>n</mi></mrow><mo>+</mo><mn>41</mn></mrow><mo>)</mo></mrow></mrow></math> turns out to be a prime number. However, if we try <math id="S1.I12.i2.p3.m4" class="ltx_Math" data-alttext="n=41" display="inline"><mrow><mi>n</mi><mo>=</mo><mn>41</mn></mrow></math>, we get</p>
 </div>
 <div id="S1.I12.i2.p4" class="ltx_para">
-<table id="S1.EGx2" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
+<table role="presentation" id="S1.EGx2" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S1.Ex3"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -772,7 +772,7 @@ Mathematical Reasoning: Writing and Proof</h1>
 </ol>
 </div>
 <div id="S1.SS1.SSS11.p2" class="ltx_para">
-<table id="S1.Ex5" class="ltx_equation ltx_eqn_table">
+<table role="presentation" id="S1.Ex5" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
