Update commerrs.html accessibility changes

--- a/links/commerrs.html
+++ b/links/commerrs.html
@@ -1,4 +1,4 @@
-<html><head>
+<html lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>Common Errors in College Math</title>
 
@@ -33,7 +33,7 @@ caution my undergraduate students about these errors at the
 beginning of each semester. &nbsp;
 <b>Outline of this web page:</b>
 
-</p><ul>
+</p><nav><ul>
 
 <li><b>ERRORS IN COMMUNICATION</b>,
 including
@@ -89,7 +89,7 @@ including
 <a href="#Constants">loss or misuse of constants of integration</a>,
 <a href="#Differentials">loss of differentials</a>.
 
-</li></ul>
+</li></ul></nav>
 
 (There is some overlap among these topics, so I
 recommend reading the whole page.)
@@ -105,7 +105,7 @@ and our language. As philosopher John Culkin said, "We don't know who discovered
 but we are certain it wasn't a fish." That certain mathematical errors are common among
 students may be partly a consequence of biases that are built into our language and
 culture, some of which we aren't even aware of.
-
+<main>
 <p></p><hr noshade=""><p>
 </p><h2>Errors in Communication</h2>
 
@@ -154,7 +154,7 @@ to a different section or drop the course altogether
 if that is feasible.  
 The remarks on communication in the next few paragraphs
 are for <i>students
-whose teachers <u>are</u> receptive to questions</i>.  For
+whose teachers <b>are</b> receptive to questions</i>.  For
 such students, a common error is that of <b>not asking
 questions</b>.
 
@@ -766,7 +766,7 @@ in <i>general</i>.  Please don't do that.)
 <b>Undistributed cancellations.</b>  Here is an error that I have
 seen fairly often, but I don't have a very clear idea
 why students make it.</p><p></p><center>
-<table border="0">
+<table role="presentation" border="0">
 <tbody><tr><td> </td><td>(3x+7)(2x–9) +
 (x<sup>2</sup>+1)</td><td> </td><td><strike> (3x+7) </strike> 
 (2x–9) + (x<sup>2</sup>+1)</td><td> </td><td>(2x–9) +
@@ -787,7 +787,7 @@ To see why, compare the preceding computation
 with the following computation (which is correct).</p><p>
 
 </p><center>
-<table border="0">
+<table role="presentation" border="0">
 <tbody><tr><td> </td><td>(3x+7) [ (2x–9) + (x<sup>2</sup>+1)] 
 </td><td> </td><td><strike> (3x+7) </strike> 
 [ (2x–9) + (x<sup>2</sup>+1) ]</td><td> </td><td>(2x–9) +
@@ -809,7 +809,7 @@ that first function f :
 </p><p>
 
 </p><center>
-<table border="0">
+<table role="presentation" border="0">
 <tbody><tr><td> </td><td> </td><td> </td><td> </td><td>x<sup>2</sup>+1</td></tr>
 
 <tr><td> </td><td> </td><td> </td><td>2x–9 +
@@ -852,7 +852,7 @@ x/(y<sub>1</sub>+y<sub>2</sub>)
 the fraction
 
 
-<center><table>
+<center><table role="presentation">
 <tbody><tr>
 	<td><u>a+b</u></td>
 </tr>
@@ -1514,7 +1514,7 @@ of <i>certification</i> it is unreliable.  To make it reliable, you need to add 
 
 
 <a name="Extraneous"></a>
-</p><p></p><center><table border="3" width="80%" cellpadding="12"><tbody><tr><td>
+</p><p></p><center><table role="presentation" border="3" width="80%" cellpadding="12"><tbody><tr><td>
 
 <i>if any of your steps are irreversible,
 then you must <b>check for extraneous roots</b> when you get to the
@@ -2100,7 +2100,7 @@ if they actually use symbols instead of words.  This may make the
 differences in the quantifiers more visually prominent.  The symbols
 to use are
 </p><p></p><center>
-<table border="2" cellpadding="6"><tbody><tr>
+<table role="presentation" border="2" cellpadding="6"><tbody><tr>
 <td><img src="forall.gif" width="15" height="19" alt="[image: for all]" align="top"></td>
 <td>universal quantifier</td>
 <td>"for all" (or "for each")</td>
@@ -2245,7 +2245,7 @@ Below is another computation like that.  Can you find all of its errors?  Some s
 actually turned this in on an exam, and expected partial credit because he had
 the right answer.  (Thanks to Sean Raleigh for bringing this one to my attention; the solution was graded by Boern Lamel.)
 
-<p></p><center><img src="bern.gif" width="583" height="101" border="0"></center><p>
+<p></p><center><img alt="The integral from 0 to 2pi of cos(x) is sin(x)/x evaluated from 0 to 2pi = sin(2pi)/(2pi)-sin(0)/0=sin-sin=0" src="bern.gif" width="583" height="101" border="0"></center><p>
 
 
 
@@ -2364,7 +2364,7 @@ correct answer, covered after about a semester of calculus, is
 at college, the students have learned that<br>
 </p><p>
 
-</p><center><table border="1">
+</p><center><table role="presentation" border="1">
 <tbody><tr>
 <td><img src="xtox1.gif" alt="[image: derivative with respect to x]" height="42" width="24" align="middle"><i>(x<sup>k</sup>) = kx<sup>k–1</sup></i></td>
 </tr>
@@ -2373,7 +2373,7 @@ at college, the students have learned that<br>
 <p>That formula is actually <b>WRONG</b>, but in a very subtle way. The
 <b>correct</b> formula is </p><p>
 
-</p><center><table border="1">
+</p><center><table role="presentation" border="1">
 <tbody><tr>
 <td><img src="xtox1.gif" alt="[image: derivative with respect to x]" height="42" width="24" align="middle"><i>(x<sup>k</sup>) = kx<sup>k–1</sup></i>    
 (for all <i>x</i> where the right side is defined),
@@ -2626,7 +2626,7 @@ its briefest form, is
 
 <nobr>∫udv = uv - ∫vdu;</nobr>
 that can be understood more easily as
-</p><center><table border="1" cellpadding="6"><tbody><tr><td>
+</p><center><table role="presentation" border="1" cellpadding="6"><tbody><tr><td>
 ∫u(x)v'(x)dx = u(x)v(x) -
 ∫u'(x)v(x)dx.
 </td></tr></tbody></table></center>
@@ -2640,7 +2640,7 @@ one particularly amusing error:
 <!-- [ferra-@libero.it] -->
 Plug <nobr>u(x)=1/x</nobr> and <nobr>v(x)=x</nobr> into the 
 formula above.  We get
-</p><center><table border="1" cellpadding="6"><tbody><tr><td>
+</p><center><table role="presentation" border="1" cellpadding="6"><tbody><tr><td>
 ∫(1/x)(1)dx = (1/x)(x) -
 ∫(-1/x<sup>2</sup>)(x)dx
 </td></tr></tbody></table></center>
@@ -2728,7 +2728,7 @@ integrals, right from the start.
 Let's use the formula
 
 </p><p></p><center>
-<table border="1" cellpadding="6"><tbody><tr><td>
+<table role="presentation" border="1" cellpadding="6"><tbody><tr><td>
 <font size="4">∫</font><sub>a</sub><sup>b</sup> u(x)v′(x)dx
   =   u(b)v(b) – u(a)v(a) –   <font size="4">∫</font><sub>a</sub><sup>b</sup> u′(x)v(x)dx.
 
@@ -3069,4 +3069,4 @@ is much kinder to the beginning students.</font>
 
 </p><p>
 
-</p></body></html>
+</p></main></body></html>
