Update 4-2.html line 395 printing issues

--- a/teaching/300/4-2.html
+++ b/teaching/300/4-2.html
@@ -391,15 +391,11 @@ then <math id="S4.I3.i2.p1.m5" class="ltx_Math" data-alttext="T" display="inline
 <div id="S4.SS2.SSS7.p1" class="ltx_para">
 <p class="ltx_p">Let <math id="S4.SS2.SSS7.p1.m1" class="ltx_Math" data-alttext="P(n)" display="inline"><mrow><mi>P</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mrow></mrow></math> be</p>
 </div>
-<div id="S4.SS2.SSS7.p2" class="ltx_para">
-<table role="presentation" id="S4.Ex12" class="ltx_equation ltx_eqn_table">
-
-<tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
-<td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
-<td class="ltx_eqn_cell ltx_align_center"><math id="S4.Ex12.m1" class="ltx_Math" data-alttext="n\text{ is a prime number or }n\text{ is a product of prime numbers. }" display="block"><mrow><mi>n</mi><mo>⁢</mo><mtext> is a prime number or </mtext><mo>⁢</mo><mi>n</mi><mo>⁢</mo><mtext> is a product of prime numbers. </mtext></mrow></math></td>
-<td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
-</tr></tbody>
-</table>
+<div class="ltx_para" style="text-align: center;">
+    <math><mi>n</mi></math> 
+    is a prime number or 
+    <math><mi>n</mi></math> 
+    is a product of prime numbers.
 </div>
 <div id="S4.SS2.SSS7.p3" class="ltx_para">
 <p class="ltx_p">(This is related to the work in Beginning Activity 2.)
