Update 5-1.html figure pathdirs

--- a/teaching/300/5-1.html
+++ b/teaching/300/5-1.html
@@ -210,7 +210,7 @@
 <div id="S5.SS1.SSS2.p1" class="ltx_para">
 <p class="ltx_p">In Beginning Activity 1, we worked with verbal and symbolic definitions of set operations. However, it is also helpful to have a visual representation of sets. Venn diagrams are used to represent sets by circles (or some other closed geometric shape) drawn inside a rectangle. The points inside the rectangle represent the universal set <math id="S5.SS1.SSS2.p1.m1" class="ltx_Math" data-alttext="U" display="inline"><mi>U</mi></math>, and the elements of a set are represented by the points inside the circle that represents the set. For example, Figure 5.1 is a Venn diagram showing two sets.</p>
 </div>
-<figure id="S5.F1" class="ltx_figure"><img src="images/4924edb2-521b-41a8-943a-5b67957d99a6-03.jpg" id="S5.F1.g1" class="ltx_graphics ltx_centering ltx_img_landscape" width="200" height="147" alt="A Venn Diagram with 1 in A but not B, 3 in B but not A, 2 in A and B, 4 outside both A and B">
+<figure id="S5.F1" class="ltx_figure"><img src="https://johnweeks03.github.io/teaching/300/fig5_1_1.jpg" id="S5.F1.g1" class="ltx_graphics ltx_centering ltx_img_landscape" width="200" height="147" alt="A Venn Diagram with 1 in A but not B, 3 in B but not A, 2 in A and B, 4 outside both A and B">
 <figcaption class="ltx_caption ltx_centering">Figure 5.1: Venn Diagram for Two Sets</figcaption>
 </figure>
 <div id="S5.SS1.SSS2.p2" class="ltx_para">
@@ -257,7 +257,7 @@
 <div id="S5.SS1.SSS2.p4" class="ltx_para">
 <p class="ltx_p">We can use these regions to represent other sets. For example, the set <math id="S5.SS1.SSS2.p4.m1" class="ltx_Math" data-alttext="A\cup B" display="inline"><mrow><mi>A</mi><mo>∪</mo><mi>B</mi></mrow></math> is represented by regions 1, 2, and 3 or the shaded region in Figure 5.2.</p>
 </div>
-<figure id="S5.F2" class="ltx_figure"><img src="images/4924edb2-521b-41a8-943a-5b67957d99a6-04.jpg" id="S5.F2.g1" class="ltx_graphics ltx_centering ltx_img_landscape" width="200" height="146" alt="Same diagram as Figure 5.1, but regions 1, 2, and 3 all inside A and B are shaded">
+<figure id="S5.F2" class="ltx_figure"><img src="https://johnweeks03.github.io/teaching/300/fig5_1_2.jpg" id="S5.F2.g1" class="ltx_graphics ltx_centering ltx_img_landscape" width="200" height="146" alt="Same diagram as Figure 5.1, but regions 1, 2, and 3 all inside A and B are shaded">
 <figcaption class="ltx_caption ltx_centering">Figure 5.2: Venn Diagram for <math id="S5.F2.m2" class="ltx_Math" data-alttext="A\cup B" display="inline"><mrow><mi>A</mi><mo>∪</mo><mi>B</mi></mrow></math></figcaption>
 </figure>
 <div id="S5.SS1.SSS2.p5" class="ltx_para">
@@ -497,10 +497,10 @@ such that }x\notin B." display="block"><mrow><mrow><mi mathvariant="normal">∅<
 <div id="S5.SS1.SSS5.p3" class="ltx_para">
 <p class="ltx_p">Finally, Venn diagrams can also be used to illustrate special relationships between sets. For example, if <math id="S5.SS1.SSS5.p3.m1" class="ltx_Math" data-alttext="A\subseteq B" display="inline"><mrow><mi>A</mi><mo>⊆</mo><mi>B</mi></mrow></math>, then the circle representing <math id="S5.SS1.SSS5.p3.m2" class="ltx_Math" data-alttext="A" display="inline"><mi>A</mi></math> should be completely contained in the circle for <math id="S5.SS1.SSS5.p3.m3" class="ltx_Math" data-alttext="B" display="inline"><mi>B</mi></math>. So if <math id="S5.SS1.SSS5.p3.m4" class="ltx_Math" data-alttext="A\subseteq B" display="inline"><mrow><mi>A</mi><mo>⊆</mo><mi>B</mi></mrow></math>, and we know nothing about</p>
 </div>
-<figure id="S5.F3" class="ltx_figure"><img src="images/4924edb2-521b-41a8-943a-5b67957d99a6-07.jpg" id="S5.F3.g1" class="ltx_graphics ltx_centering ltx_img_square" width="200" height="199" alt="Venn diagram of events A B and C with intersection of A and C highlighted">
+<figure id="S5.F3" class="ltx_figure"><img src="https://johnweeks03.github.io/teaching/300/fig5_1_3.jpg" id="S5.F3.g1" class="ltx_graphics ltx_centering ltx_img_square" width="200" height="199" alt="Venn diagram of events A B and C with intersection of A and C highlighted">
 <figcaption class="ltx_caption ltx_centering">Figure 5.3: Venn Diagram for <math id="S5.F3.m2" class="ltx_Math" data-alttext="A\cap C" display="inline"><mrow><mi>A</mi><mo>∩</mo><mi>C</mi></mrow></math></figcaption>
 </figure>
-<figure id="S5.F4" class="ltx_figure"><img src="images/4924edb2-521b-41a8-943a-5b67957d99a6-07(1).jpg" id="S5.F4.g1" class="ltx_graphics ltx_centering ltx_img_landscape" width="200" height="147" alt="Venn diagram with A contained in B and also overlapping with C">
+<figure id="S5.F4" class="ltx_figure"><img src="https://johnweeks03.github.io/teaching/300/fig5_1_4.jpg" id="S5.F4.g1" class="ltx_graphics ltx_centering ltx_img_landscape" width="200" height="147" alt="Venn diagram with A contained in B and also overlapping with C">
 <figcaption class="ltx_caption ltx_centering">Figure 5.4: Venn Diagram Showing <math id="S5.F4.m2" class="ltx_Math" data-alttext="A\subseteq B" display="inline"><mrow><mi>A</mi><mo>⊆</mo><mi>B</mi></mrow></math></figcaption>
 </figure>
 <div id="S5.SS1.SSS5.p4" class="ltx_para">
