--- a/teaching/300/2-1.html
+++ b/teaching/300/2-1.html
@@ -99,7 +99,7 @@
 <p class="ltx_p">For the statements</p>
 </div>
 <div id="S2.I3.i1.p2" class="ltx_para">
-<table id="S2.Ex1" class="ltx_equation ltx_eqn_table">
+<table role="presentation" id="S2.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -144,7 +144,7 @@
 <p class="ltx_p">For the statements</p>
 </div>
 <div id="S2.I3.i2.p2" class="ltx_para">
-<table id="S2.Ex2" class="ltx_equation ltx_eqn_table">
+<table role="presentation" id="S2.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -578,12 +578,12 @@
 <table class="ltx_tabular ltx_centering ltx_align_middle">
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
-<td class="ltx_td ltx_align_left ltx_border_l ltx_border_r ltx_border_t"><math id="S2.T2.m1" class="ltx_Math" data-alttext="P" display="inline"><mi>P</mi></math></td>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><math id="S2.T2.m2" class="ltx_Math" data-alttext="Q" display="inline"><mi>Q</mi></math></td>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><math id="S2.T2.m3" class="ltx_Math" data-alttext="R" display="inline"><mi>R</mi></math></td>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><math id="S2.T2.m4" class="ltx_Math" data-alttext="\neg Q" display="inline"><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></math></td>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><math id="S2.T2.m5" class="ltx_Math" data-alttext="P\wedge\neg Q" display="inline"><mrow><mi>P</mi><mo>∧</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow></math></td>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><math id="S2.T2.m6" class="ltx_Math" data-alttext="(P\wedge\neg Q)\rightarrow R" display="inline"><mrow><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo>∧</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">→</mo><mi>R</mi></mrow></math></td>
+<th class="ltx_td ltx_align_left ltx_border_l ltx_border_r ltx_border_t"><math id="S2.T2.m1" class="ltx_Math" data-alttext="P" display="inline"><mi>P</mi></math></td>
+<th class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><math id="S2.T2.m2" class="ltx_Math" data-alttext="Q" display="inline"><mi>Q</mi></math></td>
+<th class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><math id="S2.T2.m3" class="ltx_Math" data-alttext="R" display="inline"><mi>R</mi></math></td>
+<th class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><math id="S2.T2.m4" class="ltx_Math" data-alttext="\neg Q" display="inline"><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></math></td>
+<th class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><math id="S2.T2.m5" class="ltx_Math" data-alttext="P\wedge\neg Q" display="inline"><mrow><mi>P</mi><mo>∧</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow></math></td>
+<th class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><math id="S2.T2.m6" class="ltx_Math" data-alttext="(P\wedge\neg Q)\rightarrow R" display="inline"><mrow><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo>∧</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">→</mo><mi>R</mi></mrow></math></td>
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l ltx_border_r ltx_border_t">T</td>
@@ -659,7 +659,7 @@
 </tr>
 </tbody>
 </table>
-<figcaption id="Table_2.2">class="ltx_caption ltx_centering">Table 2.2: Truth Table for <math id="S2.T2.m8" class="ltx_Math" data-alttext="(P\wedge\neg Q)\rightarrow R" display="inline"><mrow><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo>∧</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">→</mo><mi>R</mi></mrow></math></figcaption>
+<figcaption id="Table_2.2" class="ltx_caption ltx_centering">Table 2.2: Truth Table for <math id="S2.T2.m8" class="ltx_Math" data-alttext="(P\wedge\neg Q)\rightarrow R" display="inline"><mrow><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo>∧</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">→</mo><mi>R</mi></mrow></math></figcaption>
 </figure>
 <div id="S2.SS1.SSS6.p5" class="ltx_para">
 <ul id="S2.I10" class="ltx_itemize">
